crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaBuffer PamojaBuffer;
typedef struct PamojaModbusClient PamojaModbusClient;
typedef struct PamojaModbusLine PamojaModbusLine;
typedef struct PamojaModbusServer PamojaModbusServer;
typedef struct PamojaSerialPort PamojaSerialPort;
typedef struct {
  uint32_t baud;
  uint8_t parity;
  uint8_t stop_bits;
} PamojaSerialSettings;
typedef struct {
  uint8_t kind;
  uint8_t unit;
  uint8_t function;
  uint8_t found;
  uint8_t exception;
  uint32_t received;
} PamojaModbusClientError;
PamojaStatus pamoja_modbus_server_new(uint8_t unit, PamojaModbusServer **out_server);
PamojaStatus pamoja_modbus_server_set_coils(const PamojaModbusServer *server,
                                            uint16_t start,
                                            const uint8_t *values,
                                            uintptr_t len);
PamojaStatus pamoja_modbus_server_set_discrete_inputs(const PamojaModbusServer *server,
                                                      uint16_t start,
                                                      const uint8_t *values,
                                                      uintptr_t len);
PamojaStatus pamoja_modbus_server_set_holding_registers(const PamojaModbusServer *server,
                                                        uint16_t start,
                                                        const uint16_t *values,
                                                        uintptr_t len);
PamojaStatus pamoja_modbus_server_set_input_registers(const PamojaModbusServer *server,
                                                      uint16_t start,
                                                      const uint16_t *values,
                                                      uintptr_t len);
bool pamoja_modbus_server_coil(const PamojaModbusServer *server, uint16_t address, bool *out_on);
bool pamoja_modbus_server_discrete_input(const PamojaModbusServer *server,
                                         uint16_t address,
                                         bool *out_on);
bool pamoja_modbus_server_holding_register(const PamojaModbusServer *server,
                                           uint16_t address,
                                           uint16_t *out_value);
bool pamoja_modbus_server_input_register(const PamojaModbusServer *server,
                                         uint16_t address,
                                         uint16_t *out_value);
uint8_t pamoja_modbus_server_unit(const PamojaModbusServer *server);
uintptr_t pamoja_modbus_server_served(const PamojaModbusServer *server);
PamojaStatus pamoja_modbus_server_answer(const PamojaModbusServer *server,
                                         const uint8_t *frame,
                                         uintptr_t len,
                                         PamojaBuffer **out_buffer);
void pamoja_modbus_server_free(PamojaModbusServer *server);
PamojaModbusLine *pamoja_modbus_line_new(void);
PamojaStatus pamoja_modbus_line_attach(const PamojaModbusLine *line,
                                       const PamojaModbusServer *server);
uintptr_t pamoja_modbus_line_len(const PamojaModbusLine *line);
PamojaStatus pamoja_modbus_line_port(const PamojaModbusLine *line,
                                     PamojaSerialSettings settings,
                                     PamojaSerialPort **out_port);
void pamoja_modbus_line_free(PamojaModbusLine *line);
PamojaStatus pamoja_modbus_frame_gap_nanos(PamojaSerialSettings settings, uint64_t *out_nanos);
PamojaStatus pamoja_modbus_client_new(const PamojaSerialPort *port,
                                      PamojaModbusClient **out_client);
void pamoja_modbus_client_set_response_timeout(const PamojaModbusClient *client, uint64_t micros);
void pamoja_modbus_client_set_turnaround(const PamojaModbusClient *client, uint64_t micros);
uint64_t pamoja_modbus_client_response_timeout_micros(const PamojaModbusClient *client);
uint64_t pamoja_modbus_client_turnaround_micros(const PamojaModbusClient *client);
PamojaStatus pamoja_modbus_client_read_coils(const PamojaModbusClient *client,
                                             uint8_t unit,
                                             uint16_t start,
                                             uint16_t quantity,
                                             uint8_t *out_values,
                                             PamojaModbusClientError *out_error);
PamojaStatus pamoja_modbus_client_read_discrete_inputs(const PamojaModbusClient *client,
                                                       uint8_t unit,
                                                       uint16_t start,
                                                       uint16_t quantity,
                                                       uint8_t *out_values,
                                                       PamojaModbusClientError *out_error);
PamojaStatus pamoja_modbus_client_read_holding_registers(const PamojaModbusClient *client,
                                                         uint8_t unit,
                                                         uint16_t start,
                                                         uint16_t quantity,
                                                         uint16_t *out_values,
                                                         PamojaModbusClientError *out_error);
PamojaStatus pamoja_modbus_client_read_input_registers(const PamojaModbusClient *client,
                                                       uint8_t unit,
                                                       uint16_t start,
                                                       uint16_t quantity,
                                                       uint16_t *out_values,
                                                       PamojaModbusClientError *out_error);
PamojaStatus pamoja_modbus_client_write_single_coil(const PamojaModbusClient *client,
                                                    uint8_t unit,
                                                    uint16_t address,
                                                    bool on,
                                                    PamojaModbusClientError *out_error);
PamojaStatus pamoja_modbus_client_write_single_register(const PamojaModbusClient *client,
                                                        uint8_t unit,
                                                        uint16_t address,
                                                        uint16_t value,
                                                        PamojaModbusClientError *out_error);
PamojaStatus pamoja_modbus_client_write_multiple_coils(const PamojaModbusClient *client,
                                                       uint8_t unit,
                                                       uint16_t start,
                                                       const uint8_t *values,
                                                       uintptr_t len,
                                                       PamojaModbusClientError *out_error);
PamojaStatus pamoja_modbus_client_write_multiple_registers(const PamojaModbusClient *client,
                                                           uint8_t unit,
                                                           uint16_t start,
                                                           const uint16_t *values,
                                                           uintptr_t len,
                                                           PamojaModbusClientError *out_error);
void pamoja_modbus_client_free(PamojaModbusClient *client);